Fixed filter. Fixed product thumbnail chrome alignment issue. added my email for testing of forms***

--- a/style.css
+++ b/style.css
@@ -633,6 +633,7 @@ form .filter-submit:active {
 .product-thumb-wrap {
 	margin-bottom: 30px;
 	display: inline-block;
+	vertical-align:bottom;
 }
 #filter {
 /*	background: url(img/mochaGrunge.jpg);
